--- a/src/controlmenumain.ui
+++ b/src/controlmenumain.ui
@@ -246,8 +246,8 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
-          <height>80</height>
+          <width>0</width>
+          <height>0</height>
          </size>
         </property>
         <property name="text">
@@ -302,6 +302,9 @@
       </item>
       <item row="1" column="3">
        <widget class="QToolButton" name="Home">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
