Léger changement favoris et utilisation d'un user agent de mobile

--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -9,6 +9,7 @@
         <file>../Images/1-NavigateurWeb/home.svg</file>
         <file>../Images/1-NavigateurWeb/print.svg</file>
         <file>../Images/1-NavigateurWeb/star.svg</file>
+        <file>../Images/1-NavigateurWeb/star-clear.svg</file>
         <file>../Images/1-NavigateurWeb/sync-alt.svg</file>
         <file>../Images/1-NavigateurWeb/close-alt.svg</file>
         <file>../Images/1-NavigateurWeb/PowerOff.svg</file>
