Vers une version macOS

--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -31,6 +31,7 @@
         <file>../Images/4-Courriel/print.svg</file>
         <file>../Images/EasyMenu_Icone.svg</file>
         <file>../Images/EasyMenu_Icone.ico</file>
+        <file>../Images/EasyMenu_Icone.icns</file>
         <file>../Images/0-Categorie/music.svg</file>
         <file>../Images/0-Categorie/discord.svg</file>
         <file>../Images/0-Categorie/calculator-color.svg</file>
