de HOS vers Heficience

--- a/src/controlmenumain.ui
+++ b/src/controlmenumain.ui
@@ -58,7 +58,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="resource.qrc">
-    <normaloff>:/Images/dvkbuntu-easy-menu.svg</normaloff>:/Images/dvkbuntu-easy-menu.svg</iconset>
+    <normaloff>:/Images/heficience-menu.svg</normaloff>:/Images/heficience-menu.svg</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
