--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -37,9 +37,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -109,18 +109,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -201,9 +201,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -273,18 +273,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -365,9 +365,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -437,18 +437,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>34</red>
+        <green>87</green>
+        <blue>122</blue>
        </color>
       </brush>
      </colorrole>
@@ -535,7 +535,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:rgb(0, 0, 0);</string>
+   <string notr="true">background:#22577A</string>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>false</bool>
@@ -625,9 +625,9 @@
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -652,18 +652,18 @@
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -699,9 +699,9 @@
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -726,18 +726,18 @@
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -773,9 +773,9 @@
             <colorrole role="Button">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -800,18 +800,18 @@
             <colorrole role="Base">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
             <colorrole role="Window">
              <brush brushstyle="SolidPattern">
               <color alpha="255">
-               <red>0</red>
-               <green>88</green>
-               <blue>132</blue>
+               <red>56</red>
+               <green>163</green>
+               <blue>165</blue>
               </color>
              </brush>
             </colorrole>
@@ -845,7 +845,7 @@
           <bool>false</bool>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(0, 88, 132);
+          <string notr="true">background-color: #38A3A5;
 border-radius: 20px;
 border:  8PX solid red;
 QLabel { color : white; }</string>
@@ -2297,7 +2297,7 @@ Calculatrice</string>
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>47</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
