Nouvelles Icones et correction web. Vers la 4.18.

--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -15,6 +15,7 @@
         <file>../Images/1-NavigateurWeb/PowerOff.svg</file>
         <file>../Images/1-NavigateurWeb/Dialog-error.svg</file>
         <file>../Images/1-NavigateurWeb/DiscordHOS.svg</file>
+        <file>../Images/1-NavigateurWeb/Google_G_Logo.svg</file>
         <file>../Images/2-Calculatrice/cogs.svg</file>
         <file>../Images/2-Calculatrice/euro-sign.svg</file>
         <file>../Images/3-PriseDeNotes/copy.svg</file>
