--- a/src/controlmenuweb.ui
+++ b/src/controlmenuweb.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>562</width>
-    <height>800</height>
+    <height>892</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -154,15 +154,6 @@
        </color>
       </brush>
      </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
     </active>
     <inactive>
      <colorrole role="WindowText">
@@ -297,15 +288,6 @@
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
@@ -446,15 +428,6 @@
        </color>
       </brush>
      </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
     </disabled>
    </palette>
   </property>
@@ -496,16 +469,7 @@
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
-      <property name="leftMargin">
-       <number>13</number>
-      </property>
-      <property name="topMargin">
-       <number>13</number>
-      </property>
-      <property name="rightMargin">
-       <number>13</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>13</number>
       </property>
       <property name="spacing">
@@ -1368,7 +1332,7 @@
         </property>
         <property name="icon">
          <iconset resource="resource.qrc">
-          <normaloff>:/Images/0-Categorie/globe-africa.svg</normaloff>:/Images/0-Categorie/globe-africa.svg</iconset>
+          <normaloff>:/Images/1-NavigateurWeb/Google_G_Logo.svg</normaloff>:/Images/1-NavigateurWeb/Google_G_Logo.svg</iconset>
         </property>
         <property name="iconSize">
          <size>
